--- a/Prison Digital/src/UI/Prison/DiningSupervisorJPanel.form
+++ b/Prison Digital/src/UI/Prison/DiningSupervisorJPanel.form
@@ -178,6 +178,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtPrisonerCount">
+      <Properties>
+        <Property name="enabled" type="boolean" value="false"/>
+      </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="btnPlaceRequest">
       <Properties>
@@ -199,7 +202,7 @@
     </Component>
     <Component class="javax.swing.JTextField" name="name">
       <Properties>
-        <Property name="text" type="java.lang.String" value="jTextField1"/>
+        <Property name="enabled" type="boolean" value="false"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel3">
@@ -209,8 +212,11 @@
     </Component>
     <Component class="javax.swing.JTextField" name="loc">
       <Properties>
-        <Property name="text" type="java.lang.String" value="jTextField2"/>
+        <Property name="enabled" type="boolean" value="false"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="locActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel4">
       <Properties>
@@ -219,7 +225,7 @@
     </Component>
     <Component class="javax.swing.JTextField" name="status">
       <Properties>
-        <Property name="text" type="java.lang.String" value="jTextField3"/>
+        <Property name="enabled" type="boolean" value="false"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="statusActionPerformed"/>
@@ -240,7 +246,7 @@
     </Component>
     <Component class="javax.swing.JTextField" name="prisonerCount">
       <Properties>
-        <Property name="text" type="java.lang.String" value="jTextField4"/>
+        <Property name="enabled" type="boolean" value="false"/>
       </Properties>
     </Component>
   </SubComponents>
