--- a/Prison Digital/src/UI/Prison/PrisonGuardJPanel.form
+++ b/Prison Digital/src/UI/Prison/PrisonGuardJPanel.form
@@ -36,12 +36,12 @@
                   <Component id="jLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="date" min="-2" max="-2" attributes="0"/>
-                  <Component id="present" min="-2" max="-2" attributes="0"/>
-                  <Component id="total" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                  <Component id="date" alignment="0" pref="112" max="32767" attributes="0"/>
+                  <Component id="present" alignment="0" max="32767" attributes="0"/>
+                  <Component id="total" alignment="0" max="32767" attributes="0"/>
               </Group>
-              <EmptySpace max="32767" attributes="0"/>
+              <EmptySpace pref="611" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -103,7 +103,7 @@
         <Component class="javax.swing.JTable" name="jTable1">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="4" rowCount="4">
+              <Table columnCount="4" rowCount="0">
                 <Column editable="true" title="Date" type="java.lang.Object"/>
                 <Column editable="true" title="Present" type="java.lang.Object"/>
                 <Column editable="true" title="Absent" type="java.lang.Object"/>
@@ -147,9 +147,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="date">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="jTextField1"/>
-      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="dateActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
@@ -157,9 +157,6 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="present">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="jTextField2"/>
-      </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel3">
       <Properties>
@@ -167,9 +164,6 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="total">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="jTextField3"/>
-      </Properties>
     </Component>
   </SubComponents>
 </Form>
