--- a/Prison Digital/src/UI/CriminalJusticeSystem/JudgementPage.form
+++ b/Prison Digital/src/UI/CriminalJusticeSystem/JudgementPage.form
@@ -109,7 +109,7 @@
     </Container>
     <Component class="javax.swing.JButton" name="btnAssignPrison">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Assign prisons"/>
+        <Property name="text" type="java.lang.String" value="Assign prison"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnAssignPrisonActionPerformed"/>
