--- a/Prison Digital/src/UI/CriminalJusticeSystem/PoliceOfficerLogin.form
+++ b/Prison Digital/src/UI/CriminalJusticeSystem/PoliceOfficerLogin.form
@@ -20,11 +20,11 @@
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
-                      <Component id="jButton1" min="-2" max="-2" attributes="0"/>
+                      <Component id="btnBeginTransport" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="jButton2" min="-2" max="-2" attributes="0"/>
+                      <Component id="btnTransportInProgress" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="btnChangeStatus" min="-2" max="-2" attributes="0"/>
+                      <Component id="btnPrisonerTransportCompleted" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                   </Group>
                   <Component id="jScrollPane2" alignment="0" pref="784" max="32767" attributes="0"/>
@@ -40,9 +40,9 @@
               <Component id="jScrollPane2" min="-2" pref="179" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="84" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jButton1" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jButton2" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="btnChangeStatus" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="btnBeginTransport" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="btnTransportInProgress" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="btnPrisonerTransportCompleted" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace pref="203" max="32767" attributes="0"/>
           </Group>
@@ -50,28 +50,28 @@
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="javax.swing.JButton" name="btnChangeStatus">
+    <Component class="javax.swing.JButton" name="btnPrisonerTransportCompleted">
       <Properties>
         <Property name="text" type="java.lang.String" value="Prisoner Transport Completed"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnChangeStatusActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnPrisonerTransportCompletedActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="jButton1">
+    <Component class="javax.swing.JButton" name="btnBeginTransport">
       <Properties>
         <Property name="text" type="java.lang.String" value="Begin Transport"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnBeginTransportActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="jButton2">
+    <Component class="javax.swing.JButton" name="btnTransportInProgress">
       <Properties>
         <Property name="text" type="java.lang.String" value="Transport in progress"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton2ActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnTransportInProgressActionPerformed"/>
       </Events>
     </Component>
     <Container class="javax.swing.JScrollPane" name="jScrollPane2">
